force-app/main/default/objects/Event_Details__c/Event_Details__c.object-meta.xml
<CustomObject>
    <label>Event Details</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>