force-app/main/default/objects/Event_Details__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Ending date and Time of Event</description>
    <inlineHelpText>Enter the End Time of your Event</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>