force-app/main/default/objects/Event_Details__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organizer of Event</description>
    <inlineHelpText>Enter your Organizer Name</inlineHelpText>
    <label>Event Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Event Details</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>