force-app/main/default/objects/Event_Details__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Live event or Not?</description>
    <inlineHelpText>Live event or Not?</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>