force-app/main/default/objects/Event_Details__c/fields/Location_of_event__c.field-meta.xml
<CustomField>
    <fullName>Location_of_event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of Event</description>
    <inlineHelpText>Enter Location of Event</inlineHelpText>
    <label>Location of event</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Event Details</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>