force-app/main/default/objects/Event_Details__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>Location Verified</description>
    <formula>Location_of_event__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Location Verified</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>