force-app/main/default/objects/Event_Details__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Maximum Seats Required</description>
    <inlineHelpText>Enter your Maximum Seats Required</inlineHelpText>
    <label>Max Seats</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>