force-app/main/default/objects/Event_Details__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <description>Name Of Event</description>
    <inlineHelpText>Please enter your Event Name</inlineHelpText>
    <label>Name of Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>