force-app/main/default/objects/Event_Details__c/fields/Ramaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Ramaining_Seats__c</fullName>
    <description>Remaining Seats</description>
    <formula>Max_Seats__c -  People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining Seats</inlineHelpText>
    <label>Ramaining Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>