force-app/main/default/objects/Event_Details__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Starting Time Of Event</description>
    <inlineHelpText>Enter Your Starting Time</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>