force-app/main/default/objects/Event_Details__c/validationRules/Date_Time_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Time_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( End_Date_Time__c ) ) ,(End_Date_Time__c &lt;=Start_Date_Time__c+1))</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Time Duration of your Event must be ahead of 1 day</errorMessage>
</ValidationRule>