force-app/main/default/objects/Event_Details__c/validationRules/Location_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;In-Person&apos;) , ISBLANK( Location_of_event__c ) )</errorConditionFormula>
    <errorDisplayField>Location_of_event__c</errorDisplayField>
    <errorMessage>Your Event Type in In-Person Please Fill the Location</errorMessage>
</ValidationRule>