force-app/main/default/objects/Event_Details__c/validationRules/Prevent_Location_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Location_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Event_Type__c , &apos;Virtual&apos;),
   NOT(ISBLANK( Location_of_event__c ))
)</errorConditionFormula>
    <errorDisplayField>Location_of_event__c</errorDisplayField>
    <errorMessage>Your are Event Type is Virtual You dont Need Location</errorMessage>
</ValidationRule>