force-app/main/default/objects/Event_Details__c/validationRules/Recurring_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISPICKVAL( Frequency__c , &apos;&apos;), Recurring__c ),AND(NOT(Recurring__c),NOT(ISPICKVAl(Frequency__c,&apos;&apos;))))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Please Select Value in Frequency Or You Have not Selected the Recurring check box</errorMessage>
</ValidationRule>